deploy/gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codify-gateway
  namespace: codify
  labels: 
    app: codify-gateway-label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codify-gateway-label
  template:
    metadata:
      labels:
        app: codify-gateway-label
    spec:
      containers:
        - name: codify-gateway
          image: dylee00/codify-gateway:17407718952
          ports:
            - name: http
              containerPort: 8080
            - name: actuator
              containerPort: 9090
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: actuator
            initialDelaySeconds: 15 
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
